--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,7 +5,7 @@ CMD ["bash"]
 FROM base AS test-and-build
 COPY . /workspace
 WORKDIR /workspace
-RUN .gradlew build
+RUN ./gradlew build
 
 FROM openjdk:17 AS production
 COPY --from=test-and-build /workspace/build/libs/api-0.0.1-SNAPSHOT.jar ./api.jar
