edit dockerfile of api

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -9,4 +9,4 @@ RUN ./gradlew build
 
 FROM openjdk:17 AS production
 COPY --from=test-and-build /workspace/build/libs/api-0.0.1-SNAPSHOT.jar ./api.jar
-COPY ["java","-jar","api.jar"]
+CMD ["java","-jar","api.jar"]
